<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/wirte"
        android:paddingTop="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:layout_centerInParent="true"
            android:textSize="@dimen/title_size"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="@color/wirte"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding"
            >

            <TextView
                android:id="@+id/txt_name_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/org_name"
                android:layout_alignParentLeft="true"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/txt_name_three"
                >

                <EditText
                    android:id="@+id/txt_org_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/title_size"
                    android:layout_below="@+id/txt_name_three"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:hint="请选择管辖机构..."
                    android:focusable="false"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    />


                <ImageView
                    android:id="@+id/img_clear_org_four"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@mipmap/delete_edit"
                    android:visibility="gone"
                    />



            </LinearLayout>



        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/wirte"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:layout_alignParentLeft="true"

                />

            <EditText
                android:id="@+id/txt_date_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请选择时间..."
                android:textSize="@dimen/activity_horizontal_margin"
                />


            <ImageView
                android:id="@+id/img_clear_date_four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:src="@mipmap/delete_edit"
                android:visibility="gone"
                />


        </LinearLayout>



    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/bt_query_three"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_button_selector"
        android:text="完成"
        android:textColor="@color/wirte"
        android:layout_marginTop="@dimen/activity_horizontal_margin"

        />



</LinearLayout>